Fixed the privacy policy section because line height made the message unreadable.

--- a/AdelanteRedo/Content/bootstrap.css
+++ b/AdelanteRedo/Content/bootstrap.css
@@ -403,7 +403,7 @@ hr {
 p {
   margin: 0 0 10px;
   font-weight: normal;
-  line-height: 0px;
+  line-height: 20px;
 }
 
 .lead {
